# asta

./: Cargo.toml  Dockerfile  README.md  compose.yaml  release-please-config.json
.github/actions/publish/: action.yml
.github/workflows/: ci.yaml  release.yaml
src/: env.rs  handler.rs  main.rs
src/commands/: ping.rs
