[package]
name = "asta"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/m1sk9/asta"

[dependencies]
anyhow = { version = "1.0.82" }
dotenvy = { version = "0.15.7" }
envy = { version = "0.4.2" }
poise = { version = "0.6.1" }
thiserror = { version = "1.0.63" }
tracing = { version = "0.1.40" }

[dependencies.serde]
version = "1.0.200"
features = ["derive"]

[dependencies.tokio]
version = "1.37.0"
features = ["macros", "rt-multi-thread"]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["env-filter"]
